--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
     "recharts": "^2.15.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^2.1.4",
     "@types/node": "^20",
     "@types/pdfmake": "^0.2.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9",
+    "eslint": "^8.57.0",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@next/eslint-plugin-next": "^15.1.0"
   }
 }
